panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_ptr_ref_of_deref_is_noop.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_ptr_ref_of_deref_is_noop.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_ref_of_deref_is_noop.c"
   (function-definition external stack-size=40
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (x~2 `int` @0) (42 `int` @0))
         (definition (p~3 `ptr<int>` @8)
            (addressof `ptr<int>` @8
               (x~2 `int` @0)))
         (definition (q~4 `ptr<int>` @16)
            (addressof `ptr<int>` @16
               (deref `int` @16 (p~3 `ptr<int>` @8))))
         (return (deref `int` @24 (q~4 `ptr<int>` @16))))))

----- stderr -----
