panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_ptr_relations.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_ptr_relations.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_ptr_relations.c"
   (function-definition external stack-size=56
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (p1~2 `ptr<long>` @0) ∅)
         (definition (b~3 `unsigned long long` @8) (sign-extend `unsigned long long` @8 (42 `int` @16)))
         (definition (p2~4 `ptr<long>` @16)
            (ptr-add `ptr<long>` @16
               (noop-type-conversion `long` @8 (b~3 `unsigned long long` @8))
               (p1~2 `ptr<long>` @0)))
         (definition (p3~5 `ptr<long>` @24)
            (ptr-sub `ptr<long>` @24
               (p2~4 `ptr<long>` @16)
               (noop-type-conversion `long` @8 (b~3 `unsigned long long` @8))))
         (return
            (add `int` @32
               (add `int` @32
                  (add `int` @32
                     (ptr-less `int` @32
                        (p1~2 `ptr<long>` @0)
                        (p2~4 `ptr<long>` @16))
                     (ptr-less-equal `int` @36
                        (p1~2 `ptr<long>` @0)
                        (p3~5 `ptr<long>` @24)))
                  (ptr-greater `int` @36
                     (p2~4 `ptr<long>` @16)
                     (p1~2 `ptr<long>` @0)))
               (ptr-greater-equal `int` @36
                  (p3~5 `ptr<long>` @24)
                  (p1~2 `ptr<long>` @0)))))))

----- stderr -----
