panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_return_global_variable_in_main.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_return_global_variable_in_main.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_return_global_variable_in_main.c"
   (definition external (return_value~0 `int` (static return_value)) (5 `int`))
   (function-definition external stack-size=8
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (return (return_value~0 `int` (static return_value))))))

----- stderr -----
