panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_return_without_expr.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_return_without_expr.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_return_without_expr.c"
   (declaration external (exit~0 `fn(∅: int) -> void` (static exit)) ∅)
   (function-definition external stack-size=24
      (f~1 `fn() -> void` (static f))
      (compound-statement
         (return ∅)
         (expression
            (call `void` @void
               (addressof `ptr<fn(∅: int) -> void>` @0
                  (exit~0 `fn(∅: int) -> void` (static exit)))
               (42 `int` @8)))))
   (function-definition external stack-size=24
      (main~2 `fn() -> int` (static main))
      (compound-statement
         (expression
            (call `void` @void
               (addressof `ptr<fn() -> void>` @0
                  (f~1 `fn() -> void` (static f))))))))

----- stderr -----
