panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__test_subtraction.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/test_subtraction.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/test_subtraction.c"
   (function-definition external stack-size=24
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (a~1 `int` @0) (42 `int` @0))
         (definition (b~2 `char` @4) (truncate `char` @4 (42 `int` @8)))
         (return
            (subtract `int` @8
               (sign-extend `int` @8 (b~2 `char` @4))
               (a~1 `int` @0))))))

----- stderr -----
